2019-1/220/users/2125/executions/1597_1014.log
== SUBMITION (2019-03-20 13:10:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
p=float(input("Preço: "))
lucro=*0.3
print(round(lucro,2))
-- EXECUTION TIME:
0.126637
-- ERROR:
  File "/home/codebench/codes/1597/1014/main.py", line 5
    lucro=*0.3
         ^
SyntaxError: can use starred expression only as assignment target

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 13:10:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
p=float(input("Preço: "))
lucro=*0.3
print(round(lucro,2))
-- EXECUTION TIME:
0.217239
-- ERROR:
  File "/home/codebench/codes/1597/1014/main.py", line 5
    lucro=*0.3
         ^
SyntaxError: can use starred expression only as assignment target

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 13:10:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
p=float(input("Preço: "))
lucro=p*0.3
print(round(lucro,2))
-- EXECUTION TIME:
0.123979
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
